assets/css/style.css
:root {
  --dark-blue: #38628d;
  --gold-brown: #bf7e1a;
  --test-border: 10px solid black;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Gill Sans", sans-serif;
  color: var(--dark-blue);
  background-color: white;
}

html, body {
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  overflow-x: hidden;
}

/* HEADER */
header {
  background: rgba(255, 255, 255, 0.97);
  padding: 20px 35px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 9999;
}

header h1 {
  margin: 0;
  font-size: 40px;
}

header h1 a {
  font-style: italic;
  font-weight: bolder;
}

header a {
  color: var(--dark-blue);
  text-decoration: none;
}

header nav {
  display: flex;
  justify-content: flex-end;
  width: 100%;
  flex: 1;
}

header nav ul {
  display: flex;
  flex-wrap: wrap;
  list-style: none;
}

header nav ul li a {
  color: black;
  margin: 0 50px;
  padding: 10px 40px;
  font-size: 23px;
  border-radius: 15px;
  transition: color 0.15s, background-color 0.15s, box-shadow 0.15s;
}

header nav ul li a:hover {
  color: white;
  background-color: var(--dark-blue);
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  cursor: pointer;
}


/* HERO */
 .hero {
  background: white;
  padding: 150px 0 100px 0;
 }

 .main-flex {
  display: flex;
  justify-content: center;
  padding: 0 200px;
 }

 .hero-text {
  align-self: center;
  padding: 0 50px;
 }

 .hero-text h3 {
  font-size: 7.55vw;
  white-space: nowrap;
 }

 .hero-text h4 {
  font-size: 2.55vw;
  padding-top: 10px;
  padding-bottom: 20px;
  white-space: nowrap;
  font-style: italic;
 }

 .hero-text p {
  font-size: 21px;
  color: black;
 }

#headshot {
  width: 35%;
  height: 35%;
  border-radius: 50%;
  border: 10px solid white;
  box-shadow: 0 0 10px black;
 }

.socials-flex {
  display: flex;
  justify-content: center;
  margin-top: 100px;
}

#insta-hero, #linked-hero {
  width: 8%;
  margin: 0 50px;
  transition: width .15s;
}

#insta-hero:hover, #linked-hero:hover {
  width: 9%;
}

/* ABOUT SECTION */
.about {
  background-image: url(/assets/images/aboutphoto.jpg);
  background-size: cover;
  background-position: center;
  color: white;
  display: flex;
  justify-content: flex-end;
}

.about article {
  background-color: rgba(0, 0, 0, 0.75);
  width: 40%;
  padding: 50px 0 100px 0;
}

.about article h2 {
  text-align: center;
  font-size: 60px;
  margin-bottom: 20px;
}

.about article p {
  text-align: center;
  padding: 0 20px;
  font-size: 18px;
}

.skills-list {
  margin-top: 60px;
}

.skills-list h3 {
  text-align: center;
  padding: 15px 0;
  font-size: 40px;
}

.skills-list ul li {
  text-align: center;
  padding-bottom: 10px;
  font-size: 25px;
}

/* WORK SECTION */
.work {
  background-image: url(/assets/images/black-background.webp);
  padding: 40px 0 110px 0;
  color: white;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.work h2 {
  text-align: center;
  font-size: 60px;
}

.work article a {
  text-decoration: none;
  color: black;
}

.main-work {
  margin: 50px 250px;
}

.txtover-main img {
  width: 100%;
  height: auto;
  border-radius: 20px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.75);
  opacity: .5;
  transition: opacity 0.15s;
  object-fit: cover;
}

.txtover-main {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.txtover-main figcaption {
  position: absolute;
  font-size: 130px;
  font-weight: bold;
  font-style: italic;
  background-color: rgba(0, 0, 0, 0.75);
  color: white;
  padding: 20px 50px;
  border-radius: 20px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  text-align: center;
  white-space: nowrap;
}

.main-work a:hover .txtover-main img {
  opacity: .75;
}

.other-work {
  display: flex;
  flex-wrap: wrap;
}

.other-work a {
  padding: 0 50px;
}

.other-work a img {
  width: 350px;
  height: auto;
  border-radius: 20px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.75);
  opacity: .5;
  transition: opacity 0.15s;
}

.other-work a:hover .txtover-other img {
  opacity: .75;
}

.txtover-other {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.txtover-other figcaption {
  position: absolute;
  font-size: 50px;
  font-weight: bold;
  font-style: italic;
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  padding: 20px 30px;
  border-radius: 20px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}


/* CONTACT SECTION */
.contact {
  background-color: var(--dark-blue);
  color: white;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 150px 0;
}

.contact h2 {
  font-size: 100px;
  padding-bottom: 50px;
}

.contact button {
  flex: 1 100%;
  margin: 0 800px;
  font-size: 25px;
  font-weight: bold;
  padding: 20px 50px;
  border-radius: 20px;
  border: none;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  color: var(--dark-blue);
  cursor: pointer;
  transition: opacity 0.15s;
}

.arrow {
  border: solid var(--dark-blue);
  border-width: 0 3px 3px 0;
  display: inline-flex;
  padding: 5px;
  margin-left: 3px;
  transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
}

.contact button, .arrow {
  white-space: nowrap;
}

.contact button:hover {
  opacity: .85;
}

.contact button:active {
  opacity: .6;
}

.contact-socials {
  display: flex;
  flex-wrap: wrap;
  padding-top: 60px;
}

.contact-socials a {
  margin: 0 18px;
  transition: opacity 0.15s;
}

.contact-socials a:hover {
  opacity: .75;
}

/* FOOTER */
footer {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 40px 0;
}

#email {
  flex: 0 0 100%;
  text-align: center;
  padding-top: 20px;
}

/* responsive design */
@media screen and (max-width: 1349px) {
  .about {
    background-position: -150px;
  }

  .txtover-main figcaption {
    font-size: 100px;
  }

  .other-work a img {
    width: 200px;
  }

  .txtover-other figcaption {
    font-size: 25px;
    padding: 15px 25px;
  }
}

@media screen and (max-width: 1155px) {
  header {
    padding-bottom: 0;
    justify-content: center;
    position: relative;
  }

  header h1 {
    width: 100%;
    text-align: center;
  }

  header nav ul {
    width: 100%;
    justify-content: center;
    margin-top: 20px;
    padding-bottom: 10px;
  }

  .about {
    background-position: -200px;
  }

  .txtover-main figcaption {
    font-size: 50px;
  }
}

@media screen and (max-width: 1061px) {
  header {
    margin-bottom: -60px;
  }

  .about {
    background-position: -250px;
  }
}

@media screen and (max-width: 980px) {
  .main-flex{
    flex-direction: column;
    align-items: center;
  }

  .hero-text {
    padding: 20px 0 0 0;
    text-align: center;
  }

  #headshot {
    border: 7px solid white;
  }

  .txtover-main img {
    width: 120%;
  }

  .txtover-main figcaption {
    font-size: 50px;
  }

  .other-work a {
    padding: 0 25px;
  }

  .other-work a img {
    width: 180px;
  }

  .txtover-other figcaption {
    padding: 10px 20px;
  }
}

@media screen and (max-width: 877px) {
  .txtover-main figcaption {
    font-size: 40px;
    padding: 15px 45px;
  }
  .contact h2 {
    font-size: 80px;
  }
}

@media screen and (max-width: 800px) {
  header nav {
    margin: 0 200px;
  }

  header nav ul li {
    margin-bottom: 8px;
  }

  #headshot {
    width: 50%; height: 50%;
  }

  .about {
    background-position: -330px;
  }

  .txtover-main figcaption {
    font-size: 30px;
    padding: 10px 40px;
  }

  .txtover-main img {
    width: 150%;
  }

  .other-work a img {
    width: 150px;
  }

  .txtover-other figcaption {
    font-size: 15px;
    padding: 8px 18px;
  }
}

@media screen and (max-width: 737px) {
  #headshot {
    width: 75%; height: 75%;
  }

  .txtover-main img {
    width: 180%;
  }

  .txtover-main figcaption {
    font-size: 25px;
  }
}

@media screen and (max-width: 710px) {
  .hero {
    padding: 100px 0 100px 0;
  }
  .txtover-main img {
    width: 250%;
  }

  .txtover-main figcaption {
    padding: 12px 20px;
  }
}

@media screen and (max-width: 670px) {
  .txtover-main img {
    width: 300%;
  }

  .txtover-main figcaption {
    font-size: 20px;
    padding: 12px 30px;
  }

  .contact h2 {
    font-size: 60px;
  }
}

@media screen and (max-width: 630px) {
  .txtover-main img {
    width: 400%;
  }
}

@media screen and (max-width: 599px) {
  #headshot {
    width: 100%; height: 100%;
  }

  .txtover-main img {
    width: 500%;
  }

  .txtover-main figcaption {
    font-size: 40px;
    padding: 12px 80px;
    margin: 0 ;
  }

  .other-work {
    padding-bottom: 0;
  }

  .other-work a img {
    width: 50%;
    margin-bottom: 50px;
  }

  .txtover-other figcaption {
    font-size: 30px;
  }
}

@media screen and (max-width: 580px) {
  .txtover-main img {
    width: 700%;
  }

  .contact h2 {
    font-size: 50px;
  }
}

@media screen and (max-width: 560px) {
  .txtover-main img {
    width: 800%;
  }
}

